Phase 2 of android client complete.
- Added `pollAfterSeconds` to `DeviceRegistration` model to manage polling intervals.
- Introduced `RegistrationStatusRefresher` interface for refreshing registration status.
- Updated `RefreshRegistrationStatusUseCase` to handle new polling logic.
- Modified `AppViewState` to include polling information in `PendingApproval` state.
- Implemented auto-refresh in `MainViewModel` based on polling hints from the backend.
- Enhanced UI components to display status messages and handle permission requests.
- Created a mock server script and Python backend for testing registration flow.
- Added unit tests for `MainViewModel` to verify registration and permission handling.
- Updated environment configuration to support staging and production URLs with debug flags.

--- a/android/app/gradle.properties
+++ b/android/app/gradle.properties
@@ -6,3 +6,4 @@ kotlin.code.style=official
 org.gradle.caching=true
 org.gradle.parallel=true
 android.experimental.enableNewResourceShrinker=true
+android.enableAapt2Daemon=false
