--- a/android/config/.env.example
+++ b/android/config/.env.example
@@ -1,4 +1,8 @@
-# Android client configuration (example)
-# Copy to android/config/.env and fill in real values. Never commit secrets.
-BACKEND_BASE_URL=https://staging.example.com
-RINGDOWN_API_TOKEN=replace-me
+# Backend URLs must end with a trailing slash.
+# Replace the staging URL with your real environment; the default points at the local mock server port.
+STAGING_BACKEND_BASE_URL=http://127.0.0.1:8899/
+PRODUCTION_BACKEND_BASE_URL=https://ringdown.example/api/
+
+# Debug feature flags
+DEBUG_USE_REGISTRATION_STUB=false
+DEBUG_STUB_APPROVAL_THRESHOLD=3
