Add tests for mobile device registration endpoints
Phase 3 cont'd

- Implement tests for registering new devices, including pending status.
- Add test for registering enabled devices, ensuring approved status is returned.
- Create test for denied devices, verifying correct handling of blocked devices.
- Utilize isolated configuration for testing with temporary YAML config files.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -156,3 +156,6 @@ agents:
 # Optional shared Drive folders available to agents when not overridden.
 docs_folder_greenlist_defaults:
   - "Ringdown-default"
+
+# Registered Android devices managed by the backend
+mobile_devices: {}
