Add voice session tests, update dependencies, and enhance WebRTC transport
Phase 3

- Introduced a new test suite for MobileVoiceSession, covering session start, response generation, and chunk processing.
- Added numpy as a dependency in pyproject.toml and updated the lock file.
- Updated the todo-android-spec to reflect the completion of WebRTC transport for live assistant audio streaming.
- Updated binary assets for device images.

--- a/android/config/.env.example
+++ b/android/config/.env.example
@@ -1,7 +1,7 @@
 # Backend URLs must end with a trailing slash.
 # Replace the staging URL with your real environment; the default points at the local mock server port.
-STAGING_BACKEND_BASE_URL=http://127.0.0.1:8899/
-PRODUCTION_BACKEND_BASE_URL=https://ringdown.example/api/
+STAGING_BACKEND_BASE_URL=https://danbot-twilio-bkvo7niota-uw.a.run.app/
+PRODUCTION_BACKEND_BASE_URL=https://danbot-twilio-bkvo7niota-uw.a.run.app/
 
 # Debug feature flags
 DEBUG_USE_REGISTRATION_STUB=false
