--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "openai>=1.86.0",
     "tzdata>=2024.1",
     "ruamel.yaml>=0.18.6",
+    "numpy>=1.26.0",
 ]
 
 [build-system]
