PHase 3 cont'd. App seems to connect.
Refactor network module to use DebugFeatureFlags for backend URL; enhance VoiceSessionManager with logging for connection and teardown events; add UI XML files and images for registration and voice failure states; update Android spec with backend prerequisites and automation improvements for device registration and approval process.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ android/**/*.env
 android/**/*.keystore
 android/screenshots/
 .tmp/
+.beads/
+android/.android-sdk-win/
+android/.jdk-win/
+android/app/tmp-apk/
+android/app/tmp_apk/
