feat: Add speech provider pipeline and tooling for mobile voice instrumentation
- Added speech provider abstractions in `app/speech/providers/__init__.py`.
- Implemented Google Cloud speech provider in `app/speech/providers/google.py`.
- Implemented OpenAI speech provider in `app/speech/providers/openai.py`.
- Created a new `__init__.py` file for the speech module.
- Updated `authorize_new_phone.py` to support enabling specific device IDs.
- Enhanced CI documentation for device approval process.
- Added tests for speech providers in `tests/test_speech_providers.py`.
- Updated dependencies in `pyproject.toml` for Google Cloud Speech and Text-to-Speech.
- Added live tests for mobile voice audio in `tests/live/test_mobile_voice_audio.py`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "google-api-python-client>=2.0.0",
     "google-cloud-storage>=2.10.0",
     "google-cloud-run>=0.10.0",
+    "google-cloud-texttospeech>=2.16.2",
+    "google-cloud-speech>=2.26.0",
     "ratelimit>=2.2.1",
     "click>=8.0.0",
     "typing-extensions>=4.11.0",
@@ -65,6 +67,7 @@ filterwarnings = [
 ]
 markers = [
     "integration: tests that contact third-party services",
+    "live: tests that hit the production Ringdown backend",
 ]
 norecursedirs = [
     "android/.gradle-cache",
