--- a/tests/fixtures/config.test.yaml
+++ b/tests/fixtures/config.test.yaml
@@ -1,6 +1,6 @@
 defaults:
   timezone: America/Los_Angeles
-  model: gpt-5
+  model: claude-sonnet-4-20250514
   temperature: 1.0
   max_tokens: 20000
   language: en-US
@@ -12,7 +12,7 @@ defaults:
     - team@example.com
   project_name: ringdown
   calendar_user_name: Ringdown Operator
-  backup_model: sonnet
+  backup_model: gemini/gemini-2.5-flash
   backup_temperature: 1.0
   backup_max_tokens: 20000
   max_history: 40
