add gdrive search. add markdown gdocs file creation.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -110,8 +110,8 @@ agents:
       - SendEmail
       - CreateGoogleDoc
       - ReadGoogleDoc
+      - SearchGoogleDrive
       - AppendGoogleDoc
-      - ListGoogleDocs
       - change_llm
       - reset
     email_greenlist_enforced: true
