--- a/tests/fixtures/config.test.yaml
+++ b/tests/fixtures/config.test.yaml
@@ -120,5 +120,28 @@ agents:
       - TavilySearch
       - reset
 
+mobile_devices: {}
+mobile_realtime:
+  expires_after_seconds: 600
+  ice_servers:
+    - urls:
+        - stun:stun.l.google.com:19302
+  session:
+    model: gpt-4o-realtime-preview-2024-12-17
+    output_modalities:
+      - audio
+    audio:
+      input:
+        format: pcm16
+        turn_detection:
+          type: server_vad
+          threshold: 0.5
+          silence_duration_ms: 600
+          interrupt_response: true
+          create_response: false
+      output:
+        format: pcm16
+        voice: marin
+
 docs_folder_greenlist_defaults:
   - "Ringdown-default"
