Add Todo Google Docs tools

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -112,6 +112,8 @@ agents:
       - ReadGoogleDoc
       - SearchGoogleDrive
       - AppendGoogleDoc
+      - TodoRead
+      - TodoAdd
       - change_llm
       - reset
     email_greenlist_enforced: true
