--- a/tests/fixtures/config.test.yaml
+++ b/tests/fixtures/config.test.yaml
@@ -77,6 +77,8 @@ agents:
       - CreateGoogleDoc
       - ReadGoogleDoc
       - AppendGoogleDoc
+      - TodoRead
+      - TodoAdd
       - change_llm
       - reset
     email_greenlist_enforced: true
