Switch to pipecat.
Documented the managed A/V pivot in README.md with vendor comparison, go/no-go decision, and rollout checklist (see README.md:121).
Replaced the OpenAI Realtime stack with a Daily Pipecat managed pipeline:
Introduced app/managed_av/client.py and app/managed_av/session_store.py to handle session provisioning, credential management, and in-memory state.
Rebuilt the mobile API in app/api/mobile.py to use the managed client, add /managed-av/completions + teardown endpoints, and drop the WebRTC websocket route.
Updated schema/settings/config to reference mobile_managed_av instead of mobile_realtime (app/config_schema.py:141, app/settings.py:239, config.example.yaml, config.yaml, tests/fixtures/config.test.yaml).
Removed aiortc/AV/numpy requirements from pyproject.toml (and uv.lock accordingly).
Strengthened tooling: approve_new_phone.py now refreshes the runtime cache and can optionally trigger cloudrun-deploy.py, while tests/test_mobile_registration.py covers the approval flow with MANAGED_AV_API_KEY.
Refreshed tests to exercise the new managed session flow via stubs and the session store (tests/test_mobile_voice_session.py), and added automatic cleanup fixtures.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -162,24 +162,11 @@ docs_folder_greenlist_defaults:
 
 # Registered Android devices managed by the backend
 mobile_devices: {}
-mobile_realtime:
-  expires_after_seconds: 600
-  ice_servers:
-    - urls:
-        - stun:stun.l.google.com:19302
-  session:
-    model: gpt-4o-realtime-preview-2024-12-17
-    output_modalities:
-      - audio
-    audio:
-      input:
-        format: pcm16
-        turn_detection:
-          type: server_vad
-          threshold: 0.5
-          silence_duration_ms: 600
-          interrupt_response: true
-          create_response: false
-      output:
-        format: pcm16
-        voice: marin
+mobile_managed_av:
+  provider: daily
+  api_base_url: https://api.daily.co/v1
+  pipeline_handle: ringdown-pipecat
+  room_domain: ringdown.daily.co
+  session_ttl_seconds: 600
+  metadata:
+    product: ringdown
