--- a/tests/fixtures/config.test.yaml
+++ b/tests/fixtures/config.test.yaml
@@ -126,6 +126,7 @@ mobile_devices: {}
 mobile_managed_av:
   provider: daily
   api_base_url: https://api.daily.co/v1
+  agent_name: phone-danbot-agent
   pipeline_handle: ringdown-pipecat-test
   room_domain: ringdown-test.daily.co
   session_ttl_seconds: 600
