Integrate managed voice session pipeline across backend and Android

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 # Automatically generated for Codex CLI environment
-sdk.dir=/mnt/d/Users/Dan/GoogleDrivePersonal/code/ringdown/android/.android-sdk
-jdk.dir=/usr/lib/jvm/java-17-openjdk-amd64
+sdk.dir=D:/Users/Dan/GoogleDrivePersonal/code/ringdown/android/.android-sdk
+jdk.dir=D:/Users/Dan/GoogleDrivePersonal/code/ringdown/android/.jdk
