--- a/secret-manager.yaml
+++ b/secret-manager.yaml
@@ -17,6 +17,11 @@ secrets:
 
   - secret_id: ringdown-anthropic-spellbook
     value_from_env: ANTHROPIC_API_KEY
+    env_var: ANTHROPIC_API_KEY
+
+  - secret_id: ringdown-managed-av-key
+    value_from_env: PIPECAT_API_KEY
+    env_var: PIPECAT_API_KEY
 
   - secret_id: ringdown-vertex-tether
     value_from_env: VERTEXAI_SERVICE_ACCOUNT_JSON
