Replace OpenAI realtime bridge with Pipecat managed AV

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ TWILIO_AUTH_TOKEN=twilio-token-placeholder # Used to validate Twilio webhooks
 TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXX # Required for Twilio REST calls
 TAVILY_API_KEY=tavily-placeholder                     # Enables web search tools
 
+# --- Managed A/V (Daily Pipecat Cloud) ---------------------------------------
+PIPECAT_API_KEY=pipecat-token-placeholder              # Daily managed A/V API token
+RINGDOWN_LITELLM_MASTER_KEY=litellm-master-placeholder # LiteLLM master key for Pipecat pipeline
+RINGDOWN_PIPELINE_HANDLE_STAGING=pipecat-handle-staging     # Staging pipeline handle (Daily)
+RINGDOWN_PIPELINE_HANDLE_PRODUCTION=pipecat-handle-production # Production pipeline handle (Daily)
 # --- Google Workspace integrations -------------------------------------------
 # Provide these if you enable the Gmail/Docs/Calendar tools. The service-account
 # key should live outside the repo (e.g., in a local `secrets/` directory or
@@ -30,3 +35,4 @@ DEPLOY_AUTO_APPROVE=false
 LIVE_TEST_PROJECT_ID=
 LIVE_TEST_SERVICE_NAME=
 LIVE_TEST_SERVICE_REGION=
+LIVE_TEST_MOBILE_DEVICE_ID=
