--- a/secret-manager.yaml
+++ b/secret-manager.yaml
@@ -53,3 +53,18 @@ secrets:
 
   - secret_id: ringdown-google-api-key
     value_from_env: GOOGLE_API_KEY
+
+  # Managed Pipecat pipeline + observability --------------------------------
+  - secret_id: ringdown-litellm-master-key
+    value_from_env: RINGDOWN_LITELLM_MASTER_KEY
+    env_var: RINGDOWN_LITELLM_MASTER_KEY
+
+  - secret_id: ringdown-pipeline-handle-staging
+    value_from_env: RINGDOWN_PIPELINE_HANDLE_STAGING
+    env_var: RINGDOWN_PIPELINE_HANDLE_STAGING
+    optional: true
+
+  - secret_id: ringdown-pipeline-handle-production
+    value_from_env: RINGDOWN_PIPELINE_HANDLE_PRODUCTION
+    env_var: RINGDOWN_PIPELINE_HANDLE_PRODUCTION
+    optional: true
